fix: more contrast to button text

--- a/css/dark.css
+++ b/css/dark.css
@@ -9,7 +9,7 @@ html,
   color: #e4e4e4 !important;
 }
 
-a:not(#adminbar a) {
+a:not(#adminbar a):not(.btn) {
   color: #e39777 !important;
 }
 
